# OpenEIP

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OEP.md  README.md  ROADMAP.md  SECURITY.md  compose.yaml
python/: .dockerignore  README.md  pyproject.toml
python/engine-core/src/engine_core/: __init__.py  config.py  main.py
python/engine-core/src/engine_core/agent/: __init__.py  spi.py
python/engine-core/src/engine_core/agent/api/: __init__.py  router.py
python/engine-core/src/engine_core/agent/application/: runtime.py
python/engine-core/src/engine_core/agent/infrastructure/: deterministic_provider.py  mcp_adapter.py  tools.py
python/engine-core/src/engine_core/agent/shared/: __init__.py  errors.py
python/engine-core/src/engine_core/chat/: __init__.py
python/engine-core/src/engine_core/chat/api/: __init__.py  router.py
python/engine-core/src/engine_core/chat/application/: service.py
python/engine-core/src/engine_core/chat/shared/: __init__.py  errors.py
python/engine-core/src/engine_core/embedding/: __init__.py
python/engine-core/src/engine_core/embedding/api/: __init__.py  router.py
python/engine-core/src/engine_core/ocr/: __init__.py
python/engine-core/src/engine_core/parsing/: __init__.py
python/engine-core/src/engine_core/rag/: __init__.py
python/engine-core/src/engine_core/shared/: __init__.py  api_error.py  internal_api.py
python/tests/: ocr_fixtures.py  parsing_fixtures.py  test_agent_api.py  test_agent_benchmark.py  test_agent_mcp_adapter.py  test_agent_runtime.py  test_chat_api.py  test_chat_benchmark.py  test_chat_service.py  test_config.py  test_embedding_api.py  test_embedding_benchmark.py  test_embedding_provider.py  test_embedding_service.py  test_hybrid_integration.py  test_main.py  test_ocr_api.py  test_ocr_benchmark.py  test_ocr_decoder.py  test_ocr_provider.py  test_ocr_service.py  test_office_parsing.py  test_openai_embedding_provider.py  test_parsing_api.py  test_parsing_benchmark.py  test_parsing_decoder.py  test_parsing_service.py  test_rag_api.py  test_rag_benchmark.py  test_rag_prompt.py  test_rag_service.py  test_retrieval_api.py  test_vector_repository.py
(+552 files in other folders)
