[project]
name = "openeip-engine"
version = "0.3.0a0"
description = "OpenEIP Python AI Engine — Agent, RAG, LLM, Document Processing"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "pillow>=11.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pymilvus>=2.6.0,<3.0.0",
    "elasticsearch>=8.14.0,<9.0.0",
]

[project.optional-dependencies]
integration = [
    "grpcio>=1.65.0",
    "protobuf>=5.0",
    "aiokafka>=0.11.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pip-audit>=2.9.0",
]

document = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "paddleocr>=2.8.0",
]

knowledge = [
    "pymilvus>=2.6.0,<3.0.0",
    "elasticsearch>=8.14.0,<9.0.0",
    "langchain>=0.3.0",
    "llama-index>=0.11.0",
]

agent = [
    "langgraph>=0.2.0",
    "pydantic-ai>=0.1.0",
    "mcp==1.28.1",
]

llm = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
]

[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "engine-core/src"}

[tool.setuptools.packages.find]
where = ["engine-core/src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["engine_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v -m 'not benchmark' --cov=engine_core --cov-report=term-missing --cov-fail-under=80"
markers = [
    "benchmark: isolated performance gate that must run without coverage instrumentation",
]
